Fixes spacing on final page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -308,3 +308,8 @@ h5 {
 .issuelink {
     color: black;
 }
+
+#instructions {
+    list-style-type: none;
+    margin-bottom: 10px;
+}
